--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
 
-    <div class="banner"> 
+    <div class="container-fluid banner"> 
       <div class= "  row">
       <div class="col-lg-6 col-sm-12">
         <h1 class="title">grow fast with us</h1>
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-  <section class="middle-class">
+  <section class="container-fluid middle-class">
     <div>
       <h1 class="middle-header">Looking for a job?</h1>
       <p>Find out the easiest jobs you can do from small ones to biggest and based on your interests! <br>
@@ -78,7 +78,7 @@
     </div>
 
 
-<div class=" facts-section row">
+<div class="container-fluid facts-section row">
   <div class="col-lg-6">
     <img class="unemployment-image" src="OIP.jpeg" alt="">
   </div>
@@ -94,7 +94,7 @@
 
   </section>
 
-  <section>
+  <section class="container-fluid">
     <hr style="color: black;">
     <div class="footer">
       <h1>we have so many jobs waiting for you try them out!!</h1>
@@ -142,7 +142,7 @@
     </div>
   </section>
 
-  <div class="foot">
+  <div class="container-fluid foot">
     <h5>looking for the job on this website totally depends on you we dont assure a gurentee job!
       unless you try to find on your own
        <br> -Bhanu,CEO of grow with us</h5>
